# LearningSoccer

./: CMakeLists.txt  README.md  worldTester.cpp
include/glad/: glad.h
world/: ball.cpp  ball.h  glad.c  object.cpp  object.h  phys.cpp  phys.h  view.cpp  view.h  world.cpp  world.h
